--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "space-toursim",
+  "name": "space-tourism",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -30,5 +30,9 @@
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17",
     "vite": "^6.3.5"
-  }
+  },
+  "engines": {
+  "node": "18.x"
+}
+
 }
